修改历史报文查看，更改publish方式 存在问题：     publish报文需要做更改，或者在点击发布报文按钮时进行字符串转换

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="s_v_m_publish">发布报文主题</string>
     <string name="s_v_m_subcribe">订阅主题</string>
     <string name="s_v_m_client_setting">客户端配置</string>
+    <string name="s_v_example">eg:\n
+      字符串： hello\n
+      二进制： 00000001 00000010\n
+      十六进制：0A 1B\n</string>
 </resources>
